# raytracer11

./: .gitignore  CMakeLists.txt  README.md  SConstruct  premake4.lua  raytracer11.sln
build_vs/: raytracer11.sln  raytracer11.vcxproj  raytracer11.vcxproj.filters
inc/: ailoader.h  basic_material_renderer.h  basic_renderer.h  bvh_node.h  camera.h  cmmn.h  grid.h  parallel_tiles_renderer.h  path_tracing_renderer.h  picojson.h  picolisp.h  postprocesser.h  pt_materials.h  renderer.h  surface.h  texture.h  triangle_mesh.h
inc/soil/: stb_image_aug.h
raytracer11/: aux_math.h  basic_material_renderer.cpp  basic_material_renderer.h  cmmn.h  main.cpp  raytracer11.vcxproj  raytracer11.vcxproj.filters  renderer.cpp  renderer.h  surface.cpp  surface.h  texture.cpp  texture.h
scenes/: .test0.json.swp  boxonly.json  cornell-box.json  test0.json  test_bmp.json  test_cone_shiny.json  test_cook_torrance.json  test_envmap.json  test_mesh.json  test_model.json  test_refract.json  test_shiny.json
src/: .main.cpp.swp  .old_main.cpp.swp  CMakeLists.txt  basic_material_renderer.cpp  basic_renderer.cpp  bvh_node.cpp  main.cpp  old_main.cpp  parallel_tiles_renderer.cpp  path_tracing_renderer.cpp  postprocesser.cpp  renderer.cpp  surface.cpp  texture.cpp  triangle_mesh.cpp
src/soil/: SOIL.c  image_DXT.c  image_helper.c  stb_image_aug.c
